# advent-of-code

./: .gitignore  .stars.txt  Cargo.toml  Justfile  Makefile  README.md  pyproject.toml  run_all.py  setup.cfg
.github/workflows/: test.yml
.template/src/: main.rs  parse.rs
core/: Cargo.toml
core/src/: benchmark.rs  coordinates.rs  enums.rs  error.rs  error_handling.rs  input.rs  lib.rs  parsers.rs  prelude.rs  timeouts.rs  types.rs  utils.rs
prob1/: Cargo.toml
prob1/src/: main.rs
prob10/: Cargo.toml
prob10/src/: main.rs
prob11/: Cargo.toml
prob11/src/: main.rs
prob12/: Cargo.toml
prob12/src/: main.rs
prob13/: Cargo.toml
prob13/src/: main.rs
prob14/: Cargo.toml
prob14/src/: main.rs
prob15/: Cargo.toml
prob15/src/: main.rs
prob16/: Cargo.toml
prob16/src/: main.rs
prob17/: Cargo.toml
prob17/src/: main.rs
prob18/: Cargo.toml
prob18/src/: main.rs
prob19/: Cargo.toml
prob19/src/: main.rs
prob2/: Cargo.toml
prob2/src/: main.rs
prob20/: Cargo.toml
prob3/: Cargo.toml
prob3/src/: main.rs
prob4/: Cargo.toml
prob4/src/: main.rs
prob5/: Cargo.toml
prob5/src/: main.rs
prob6/: Cargo.toml
prob6/src/: main.rs
prob7/: Cargo.toml
prob7/src/: main.rs
prob8/: Cargo.toml
prob8/src/: main.rs
prob9/: Cargo.toml
prob9/src/: main.rs
src/advent_of_code/: __init__.py  runner.py  utils.py
visual/: Cargo.toml  README.md
visual/src/: grid.rs  (+1 more)
year2019/: Cargo.toml
year2021/: Cargo.toml
year2022/: Cargo.toml
year2023/: Cargo.toml
year2024/: Cargo.toml  Justfile  README.md
year2025/: Cargo.toml  Justfile
(+247 files in other folders)
