[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Axel Örn <dev@absalon.is>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^9.2.0"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"
mypy = "^0.790"
flake8 = "^3.8.4"
flake8-builtins = "^1.5.3"
flake8-isort = "^4.0.0"
flake8-bugbear = "^20.11.1"
flake8-black = "^0.2.1"
flake8-comprehensions = "^3.3.0"
flake8-annotations = "^2.4.1"
ipdb = "^0.13.4"
pdbpp = "^0.10.2"
pytest = "^6.1.2"
pytest-clarity = "^0.3.0-alpha.0"
pytest-watch = "^4.2.0"

[tool.poetry.scripts]
year = 'advent_of_code.runner:run'

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80
atomic = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
